2008-12-04  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/support.c, src/support.h:
   Removed unused code.
 * src/main.c, src/document.c, src/symbols.c:
   Don't mark console messages as translatable.
   Add two comments for translators.
 * plugins/genapi.py:
   Beatify the header comments of the generated API file.
   Add command line option to suppress status output.
 * THANKS, geany.glade, src/about.c, src/editor.c, src/editor.h,
   src/interface.c, src/keyfile.c, src/plugindata.h, src/prefs.c:
   Add auto-closing of braces, brackets and quotes
   (patch by Guillaume de Rorthais, thanks).
 * geany.glade, src/interface.c:
   Don't mark labels of invisible menu items as translatable.


2008-12-04  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/plugindata.h, src/document.h, doc/pluginsymbols.c,
   doc/plugins.dox, plugins/geanyfunctions.h, plugins/pluginmacros.h,
   plugins/genapi.py:
   Deprecate pluginmacros.h in favour of geanyfunctions.h.
   Move geany macro to plugindata.h.
   Remove geanyfunctions.h dependency on pluginmacros.h.
 * src/plugins.c, plugins/geanyfunctions.h, plugins/genapi.py:
   Allow generating macros for functions with digits in the name.
   Don't generate dummyprefix_scintilla_send_message and lookup_widget
   macros.
 * plugins/saveactions.c, plugins/export.c, plugins/vcdiff.c,
   plugins/filebrowser.c, plugins/splitwindow.c, plugins/htmlchars.c,
   plugins/classbuilder.c:
   Update to use geanyfunctions.h.
 * data/filetypes.common:
   Make whitespace setting not override background colour by default,
   otherwise e.g. unterminated strings in C can have inconsistent
   background colour when Show Whitespace is enabled.


2008-12-03  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * plugins/Makefile.am, src/Makefile.am:
   Move target for geanyfunctions.h to plugins/Makefile.am and depend
   on src/plugins.c instead of all plugin API headers.