@@ -1,3 +1,12 @@
+2008-12-05  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/keybindings.c, src/sciwrappers.c, src/sciwrappers.h,
+   src/callbacks.c, src/plugins.c, src/editor.c,
+   plugins/geanyfunctions.h:
+   Rename sci_cmd() to sci_send_command() to match the plugin API and
+   fix the generated macro name.
+
+
 2008-12-04  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * src/support.c, src/support.h:
